<resources>
    <string name="app_name">AddApp</string>
    <string name="question_mark">\?</string>
    <string name="welcome_title">Состав числа</string>
    <string name="game_rules">
        Правила игры: перед вами будет три фигуры, две снизу и одна сверху, в двух из них будут
        числа. Необходимо, чтобы сумма чисел из двух нижних фигур была равна числу в верхней фигуре,
        для этого нужно вставить недостающее число.\n\nПример: в верхнем круге число 7, в одном
        из нижних знак вопроса, а в другом число 4. Значит на месте вопросительного знака должно
        быть число 3, потому что 3 + 4 = 7
    </string>
    <string name="button_understand">Понятно</string>
    <string name="welcome_logo">Welcome logo</string>
    <string name="choose_level_title">Выбирай уровень и играй!</string>
    <string name="easy_level">Легкий</string>
    <string name="normal_level">Средний</string>
    <string name="hard_level">Тяжелый</string>
    <string name="test_level">Тестовый</string>
    <string name="ed_mat">Материалы для учёбы:</string>
    <string name="easy_art">На листе бумаги нарисовали карандашом любую замкнутую фигуру любого размера.
        Обозначили внутреннюю часть фигуры числом 5. Вырезали её. Внутри фигуры нарисовали ещё одну
        любую замкнутую фигуру. Обозначили её цифрой 3. Теперь по контуру вырезали фигуру, обозначенную
        цифрой 3. Удалим её. Каким числом обозначить то, что осталось? Подсознание подсказывает
        ответ – числом 2.\nВопрос: Что произошло с размером первоначальной фигуры?\nОтвет:
        Он уменьшился.\nВопрос: Назовите математически действие удаления.\nОтвет:
        Вычитание.\nВопрос:Назовите результат действия удаления.\nОтвет: Остаток. Вернёмся к примеру.
    </string>

    <string name="game_over">Game Over</string>
    <string name="normal_art">Прежде всего ребенок должен знать, как называются числа второго
        десятка и в каком порядке они идут друг за другом. После этого понадобится двадцать одинаковых
        деталей чего-либо: кубиков, счетных палочек, карточек от игр и прочее. Разложите с ребенком
        кубики (карточки, палочки и прочее) в два ряда по 10 штук в каждом ряду. Первый ряд –
        это первый десяток, можете даже пронумеровать все кубики первого десятка. Второй ряд –
        это числа второго десятка. Выложите их один под другим, т.е. кубики с порядковыми номера
        «один» и «одиннадцать» должны располагаться один над другим, «два» над «двенадцать», «пять»
        над «пятнадцать» и так далее. Запоминать названия чисел второго десятка так будет намного
        проще: 11 – к слову «один» прибавляет окончание «-дцать», лежит на нем «один», так и получает
        «один-на-дцать». Таким же образом получаем и другие числа «две-на-дцать», «три-на-дцать» и
        так далее. Повторяйте с ребенком такое упражнение до тех пор, пока он не запомнит числа.
    </string>
    <string name="hard_art"> Перед тем, как начать обучение счету в пределах двух десятков,
        ребенок должен четко понимать, где у числа десятки, а где – единицы. Если вы будете
        объяснять ребенку правила вычисления «на пальцах», то скорее всего, он ничего не поймет.
        Для обучения вам потребуются наглядные пособия, например, кубики. Чтобы объяснить ребенку,
        как делать вычисления без перехода через десяток, попросите его выложить в линию 10 кубиков.
        Это десяток. Теперь попросите его прибавить к ним еще 3 кубика, поставив их сверху на
        первые десяток (одиннадцатый кубик на первых, двенадцатый на второй, тринадцатый на третий).
        Проговаривайте свои действия – «десять плюс три равно тринадцать».
        Подобный образом составьте и другие числа, без перехода через десяток.
   </string>

    <string name="score_answers">Ваш счет: %s</string>
    <string name="score_percentage">Процент правильных ответов: %s</string>
    <string name="retry">Попробовать снова</string>
    <string name="right_answers">Правильных ответов %s из %s необходимых</string>
    <string name="required_percentage">Необходимый процент правильных ответов: %s</string>
    <string name="required_score">Необходимое количество правильных ответов: %s</string>
    <string name="progress_answers">Правильных ответов %s (минимум %s)</string>
    <string name="update_material">Обновить материалы для учёбы:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>