<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="gameResult"
            type="com.exampleone.addapp.domain.entity.GameResult"
            />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/background_light"
        tools:context=".presentation.GameFinishedFragment"
        >

        <ImageView
            android:id="@+id/emoji_result"
            android:layout_width="183dp"
            android:layout_height="98dp"
            android:layout_margin="48dp"
            android:contentDescription="@string/game_over"
            app:layout_constraintBottom_toTopOf="@id/tv_required_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.03"
            app:resultEmoji="@{gameResult.winner}"
            tools:srcCompat="@drawable/ic_smile" />

        <TextView
            android:id="@+id/tv_required_answers"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_answers"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.29000002"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredAnswers="@{gameResult.gameSettings.minCountOfRightAnswers}"
            tools:text="@string/required_score" />

        <TextView
            android:id="@+id/tv_score_answers"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_required_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_answers"
            app:score="@{gameResult.countOfRightAnswers}"
            tools:text="@string/score_answers" />

        <TextView
            android:id="@+id/tv_required_percentage"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@id/tv_score_percentage"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_score_answers"
            app:layout_constraintVertical_chainStyle="packed"
            app:requiredPercentage="@{gameResult.gameSettings.minPercentOfRightAnswers}"
            tools:text="@string/required_percentage" />

        <TextView
            android:id="@+id/tv_score_percentage"
            style="@style/Widget.AppCompat.TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/tv_required_answers"
            app:layout_constraintStart_toStartOf="@id/tv_required_answers"
            app:layout_constraintTop_toBottomOf="@id/tv_required_percentage"
            app:scorePercentage="@{gameResult}"
            tools:text="@string/score_percentage" />

        <Button
            android:id="@+id/button_retry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="308dp"
            android:text="@string/retry"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:text="@string/update_material"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/button_retry"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/button_retry"
            app:layout_constraintTop_toBottomOf="@+id/button_retry" />

        <Button
            android:id="@+id/btAdEasy"
            android:layout_width="0dp"
            android:backgroundTint="@android:color/holo_green_light"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/easy_level"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <Button
            android:id="@+id/btAdNormal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_orange_light"
            android:text="@string/normal_level"
            app:layout_constraintEnd_toEndOf="@+id/btAdEasy"
            app:layout_constraintStart_toStartOf="@+id/btAdEasy"
            app:layout_constraintTop_toBottomOf="@+id/btAdEasy" />

        <Button
            android:id="@+id/btAdHard"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/holo_red_light"
            android:text="@string/hard_level"
            app:layout_constraintEnd_toEndOf="@+id/btAdNormal"
            app:layout_constraintStart_toStartOf="@+id/btAdNormal"
            app:layout_constraintTop_toBottomOf="@+id/btAdNormal" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
